--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,51 @@
-opencv-python
-numpy
-tensorflow
-scikit-learn
+absl-py==2.2.1
+astunparse==1.6.3
+blinker==1.8.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.7
+Flask==3.0.3
+flatbuffers==25.2.10
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.71.0
+h5py==3.13.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+keras==3.9.1
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.1
+mdurl==0.1.2
+ml_dtypes==0.5.1
+namex==0.0.8
+numpy==2.1.3
+opencv-python==4.11.0.86
+opt_einsum==3.4.0
+optree==0.14.1
+packaging==24.2
+protobuf==5.29.4
+Pygments==2.19.1
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.16
+PyQt5_sip==12.17.0
+pyserial==3.5
+requests==2.32.3
+rich==14.0.0
+scikit-learn==1.6.1
+scipy==1.15.2
+setuptools==78.1.0
+six==1.17.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+termcolor==2.5.0
+threadpoolctl==3.6.0
+typing_extensions==4.13.0
+urllib3==2.3.0
+Werkzeug==3.0.4
+wheel==0.45.1
+wrapt==1.17.2
